--- a/.github/workflows/learn-github-action.yml
+++ b/.github/workflows/learn-github-action.yml
@@ -10,4 +10,6 @@ jobs:
           node-version: '14'
       - run: npm install -g bats
       - run: bats -v
-      
+      - name: Run build script
+        run: ./.github/scripts/build.sh
+        shell: bash      
